# ModelProcess

./: .gitignore  README.md
ModelCenter/: CMakeLists.txt  README.md
ModelCenter/src/: FbxMeshCenter.cpp  tt.fbx
VertexOffset/: CMakeLists.txt  Common.cpp  Common.h  README.md  tt.fbx  vertexoffset.cpp
WtmsMerge/: README.md  wtmsmerge.py
